crates/etas_tests/fixtures/compiler/projects/positive/dependency_spec_trace_metadata_replay/src/app/model.es
module app.model;

public type LocalPacket = {
    body: string,
};

public flow local_packet() -> LocalPacket
{
    return LocalPacket { body = "metadata replay" };
}
