crates/etas_tests/fixtures/compiler/projects/negative/private_import/src/app/util.es
module app.util;

flow helper() -> unit {
    return;
}
